[project]
name = "nonebot-plugin-uninfo"
version = "0.8.2"
description = "Universal Information Model for Nonebot2"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.2",
    "importlib-metadata>=7.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "isort>=6.0.1",
    "black>=25.1.0",
    "loguru>=0.7.3",
    "ruff>=0.11.0",
    "fastapi>=0.115.11",
    "uvicorn[standard]>=0.34.0",
    "nonebot2[httpx,websockets]>=2.4.2",
    "nonebot-adapter-console<0.10.0,>=0.9.0",
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-dodo>=0.2.1",
    "nonebot-adapter-feishu>=2.6.2",
    "nonebot-adapter-kaiheila>=0.3.4",
    "nonebot-adapter-mirai>=2.3.3",
    "nonebot-adapter-minecraft>=1.4.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-qq>=1.6.2",
    "nonebot-adapter-red>=0.9.0",
    "nonebot-adapter-satori>=0.13.4",
    "nonebot-adapter-telegram>=0.1.0b20",
    "nonebot-adapter-kritor>=0.3.2",
    "nonebot-adapter-tailchat>=0.1.0b13",
    "nonebot-plugin-alconna>=0.56.2",
    "nonebot-plugin-orm[default]>=0.7.7",
    "nonebot-adapter-mail>=1.0.0a7",
    "nonebot-adapter-wxmp>=0.1.8",
    "nonebot-adapter-milky>=0.4.2",
    "nonebot-adapter-efchat>=0.1.4",
]
[tool.pdm.build]
includes = ["src/nonebot_plugin_uninfo"]


[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = false
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm.scripts]
format = { composite = ["isort ./src/ example.py","black ./src/ example.py","ruff check ./src/ example.py"] }


[tool.nonebot]
adapters = [
    # { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    # { name = "Satori", module_name = "nonebot.adapters.satori" },
    # { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["example"]
plugin_dirs = []
builtin_plugins = []
